update eww, delete lot's of file and now ues wallust

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -1,6 +1,9 @@
-@import "/home/itan/.cache/wal/colors.scss";
+@import "wallust/colors-eww.scss";
 @import "scss/bar";
 @import "scss/calendar.scss";
+@import "scss/wswid.scss";
+@import "scss/music.scss";
+@import "scss/sysinfo.scss";
 
 * {
   font-family: 'JetBrains Mono NF';
