--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -3,7 +3,7 @@
 
 /* Importing pywal colors */
 
-@import '../../.cache/wal/colors-waybar.css';
+@import './wallust/colors-wallust.css';
 
 window {
     font-family: Fira Code Medium;
