--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -4,9 +4,8 @@
 @import "scss/wswid.scss";
 @import "scss/music.scss";
 @import "scss/sysinfo.scss";
+@import "scss/clock.scss";
 
 * {
   font-family: 'JetBrains Mono NF';
 }
-
-
