--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FCF5EA;
+@define-color text #FFF2DE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(2,4,6,0.25);
-@define-color background-alt #020406;
-@define-color cursor #FCF5EA;
-@define-color hovered #D7C2AA;
-@define-color button-background #B9AA92;
-@define-color button-active #806465;
-@define-color border #A97366;
-@define-color urgent #F3E8D8;
+@define-color background rgba(0,0,3,0.25);
+@define-color background-alt #000003;
+@define-color cursor #FFF2DE;
+@define-color hovered #5DA98D;
+@define-color button-background #BEA479;
+@define-color button-active #A0502C;
+@define-color border #8B7869;
+@define-color urgent #F6E5C8;
 
 
-@define-color color0 #020406;
-@define-color color1 #7F564C;
-@define-color color2 #806465;
-@define-color color3 #A76B58;
-@define-color color4 #A19280;
-@define-color color5 #B99580;
-@define-color color6 #B9AA92;
-@define-color color7 #F3E8D8;
-@define-color color8 #AAA297;
-@define-color color9 #A97366;
-@define-color color10 #AA8587;
-@define-color color11 #DF8F75;
-@define-color color12 #D7C2AA;
-@define-color color13 #F7C6AA;
-@define-color color14 #F7E2C2;
-@define-color color15 #F3E8D8;
+@define-color color0 #000003;
+@define-color color1 #685A4F;
+@define-color color2 #A0502C;
+@define-color color3 #AA5243;
+@define-color color4 #467F6A;
+@define-color color5 #B48957;
+@define-color color6 #BEA479;
+@define-color color7 #F6E5C8;
+@define-color color8 #ACA08C;
+@define-color color9 #8B7869;
+@define-color color10 #D66A3B;
+@define-color color11 #E36D5A;
+@define-color color12 #5DA98D;
+@define-color color13 #F0B674;
+@define-color color14 #FEDBA1;
+@define-color color15 #F6E5C8;
