--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -4,6 +4,7 @@
 @import "scss/wswid.scss";
 @import "scss/music.scss";
 @import "scss/sysinfo.scss";
+@import "scss/windows.scss";
 @import "scss/clock.scss";
 
 * {
