--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFF2DE;
+@define-color text #FCEEDA;
 @define-color foreground #bfd9d7;
-@define-color background rgba(0,0,3,0.25);
-@define-color background-alt #000003;
-@define-color cursor #FFF2DE;
-@define-color hovered #5DA98D;
-@define-color button-background #BEA479;
-@define-color button-active #A0502C;
-@define-color border #8B7869;
-@define-color urgent #F6E5C8;
+@define-color background rgba(0,0,2,0.25);
+@define-color background-alt #000002;
+@define-color cursor #FCEEDA;
+@define-color hovered #DBAC64;
+@define-color button-background #B89B6F;
+@define-color button-active #A26C64;
+@define-color border #937574;
+@define-color urgent #F2DFC1;
 
 
-@define-color color0 #000003;
-@define-color color1 #685A4F;
-@define-color color2 #A0502C;
-@define-color color3 #AA5243;
-@define-color color4 #467F6A;
-@define-color color5 #B48957;
-@define-color color6 #BEA479;
-@define-color color7 #F6E5C8;
-@define-color color8 #ACA08C;
-@define-color color9 #8B7869;
-@define-color color10 #D66A3B;
-@define-color color11 #E36D5A;
-@define-color color12 #5DA98D;
-@define-color color13 #F0B674;
-@define-color color14 #FEDBA1;
-@define-color color15 #F6E5C8;
+@define-color color0 #000002;
+@define-color color1 #6E5857;
+@define-color color2 #A26C64;
+@define-color color3 #8C864B;
+@define-color color4 #A4814B;
+@define-color color5 #A39E5C;
+@define-color color6 #B89B6F;
+@define-color color7 #F2DFC1;
+@define-color color8 #A99C87;
+@define-color color9 #937574;
+@define-color color10 #D89086;
+@define-color color11 #BBB364;
+@define-color color12 #DBAC64;
+@define-color color13 #D9D27B;
+@define-color color14 #F6CF94;
+@define-color color15 #F2DFC1;
