--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -8,5 +8,7 @@
 @import "scss/clock.scss";
 
 * {
-  font-family: 'JetBrains Mono NF';
+  font-family: 'Poppins';
+  font-weight: 600;
+  letter-spacing: 1px;
 }
