--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FCEEDA;
+@define-color text #FCF5EA;
 @define-color foreground #bfd9d7;
-@define-color background rgba(0,0,2,0.25);
-@define-color background-alt #000002;
-@define-color cursor #FCEEDA;
-@define-color hovered #DBAC64;
-@define-color button-background #B89B6F;
-@define-color button-active #A26C64;
-@define-color border #937574;
-@define-color urgent #F2DFC1;
+@define-color background rgba(15,17,18,0.25);
+@define-color background-alt #0F1112;
+@define-color cursor #FCF5EA;
+@define-color hovered #D7C2AA;
+@define-color button-background #B9AA92;
+@define-color button-active #748173;
+@define-color border #DF8F75;
+@define-color urgent #F3E8D8;
 
 
-@define-color color0 #000002;
-@define-color color1 #6E5857;
-@define-color color2 #A26C64;
-@define-color color3 #8C864B;
-@define-color color4 #A4814B;
-@define-color color5 #A39E5C;
-@define-color color6 #B89B6F;
-@define-color color7 #F2DFC1;
-@define-color color8 #A99C87;
-@define-color color9 #937574;
-@define-color color10 #D89086;
-@define-color color11 #BBB364;
-@define-color color12 #DBAC64;
-@define-color color13 #D9D27B;
-@define-color color14 #F6CF94;
-@define-color color15 #F2DFC1;
+@define-color color0 #3A3B3D;
+@define-color color1 #AC7360;
+@define-color color2 #748173;
+@define-color color3 #AB8D89;
+@define-color color4 #A19280;
+@define-color color5 #B99580;
+@define-color color6 #B9AA92;
+@define-color color7 #F3E8D8;
+@define-color color8 #AAA297;
+@define-color color9 #DF8F75;
+@define-color color10 #9BAC9A;
+@define-color color11 #E4BCB7;
+@define-color color12 #D7C2AA;
+@define-color color13 #F7C6AA;
+@define-color color14 #F7E2C2;
+@define-color color15 #F3E8D8;
