--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FCF5EA;
+@define-color text #FFF2DE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(15,17,18,0.25);
-@define-color background-alt #0F1112;
-@define-color cursor #FCF5EA;
-@define-color hovered #D7C2AA;
-@define-color button-background #B9AA92;
-@define-color button-active #748173;
-@define-color border #DF8F75;
-@define-color urgent #F3E8D8;
+@define-color background rgba(13,15,17,0.25);
+@define-color background-alt #0D0F11;
+@define-color cursor #FFF2DE;
+@define-color hovered #F0B674;
+@define-color button-background #BEA479;
+@define-color button-active #B66A5E;
+@define-color border #D66A3B;
+@define-color urgent #F6E5C8;
 
 
-@define-color color0 #3A3B3D;
-@define-color color1 #AC7360;
-@define-color color2 #748173;
-@define-color color3 #AB8D89;
-@define-color color4 #A19280;
-@define-color color5 #B99580;
-@define-color color6 #B9AA92;
-@define-color color7 #F3E8D8;
-@define-color color8 #AAA297;
-@define-color color9 #DF8F75;
-@define-color color10 #9BAC9A;
-@define-color color11 #E4BCB7;
-@define-color color12 #D7C2AA;
-@define-color color13 #F7C6AA;
-@define-color color14 #F7E2C2;
-@define-color color15 #F3E8D8;
+@define-color color0 #383A3C;
+@define-color color1 #B27053;
+@define-color color2 #B66A5E;
+@define-color color3 #4F8571;
+@define-color color4 #B48957;
+@define-color color5 #BA8E72;
+@define-color color6 #BEA479;
+@define-color color7 #F6E5C8;
+@define-color color8 #ACA08C;
+@define-color color9 #D66A3B;
+@define-color color10 #E36D5A;
+@define-color color11 #5DA98D;
+@define-color color12 #F0B674;
+@define-color color13 #F8BD98;
+@define-color color14 #FEDBA1;
+@define-color color15 #F6E5C8;
