--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -6,8 +6,9 @@
 @import './wallust/colors-wallust.css';
 
 window {
-    font-family: Fira Code Medium;
-    font-size: 18pt;
+    font-family: Poppins;
+    font-size: 16pt;
+    letter-spacing: 0.1em;
     color: #cdd6f4; /* text */
     background-color: rgba(30, 30, 30, 0.6);
 }
@@ -15,11 +16,14 @@ window {
 button {
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 20%;
+    background-size: 30%;
     margin: 20px;
     background-color: rgba(200, 220, 255, 0);
     animation: gradient_f 20s ease-in infinite;
-    border-radius: 80px; /* Increased border radius for a more rounded look */
+    border-radius: 90px; /* Increased border radius for a more rounded look */
+    box-shadow: 0 0 0px #00000000; 
+    transition-duration: 0.4s;
+    letter-spacing: 0.5em;
 }
 
 button:focus {
@@ -27,9 +31,8 @@ button:focus {
     color: #1e1e1e;
     background-size: 50%;
     border-radius: 80px; 
-    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-    box-shadow: 3 3 8px @color7; 
-
+    transition: all 0.6s cubic-bezier(.55, 0.0, .28, 1.682);
+    box-shadow: 3 3 20px @color2; 
 }
 
 button:hover {
@@ -37,9 +40,8 @@ button:hover {
     color: #1e1e1e;
     background-size: 50%;
     border-radius: 80px; 
-    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-    box-shadow: 0 0 20px @color7; 
-	
+    transition: all 0.6s cubic-bezier(.55, 0.0, .28, 1.682);
+    box-shadow: 0 0 25px @color2; 
 }
 
 /* Adjust the size of the icon or content inside the button */
