added new window widget for eww

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -6,6 +6,7 @@
 @import "scss/sysinfo.scss";
 @import "scss/windows.scss";
 @import "scss/clock.scss";
+@import "scss/quickActions.scss";
 
 * {
   font-family: 'Poppins';
