--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFF2DE;
+@define-color text #F5E9E2;
 @define-color foreground #bfd9d7;
-@define-color background rgba(13,15,17,0.25);
-@define-color background-alt #0D0F11;
-@define-color cursor #FFF2DE;
-@define-color hovered #F0B674;
-@define-color button-background #BEA479;
-@define-color button-active #B66A5E;
-@define-color border #D66A3B;
-@define-color urgent #F6E5C8;
+@define-color background rgba(14,16,20,0.25);
+@define-color background-alt #0E1014;
+@define-color cursor #F5E9E2;
+@define-color hovered #CE938D;
+@define-color button-background #AA9081;
+@define-color button-active #937575;
+@define-color border #1187B6;
+@define-color urgent #E8D7CD;
 
 
-@define-color color0 #383A3C;
-@define-color color1 #B27053;
-@define-color color2 #B66A5E;
-@define-color color3 #4F8571;
-@define-color color4 #B48957;
-@define-color color5 #BA8E72;
-@define-color color6 #BEA479;
-@define-color color7 #F6E5C8;
-@define-color color8 #ACA08C;
-@define-color color9 #D66A3B;
-@define-color color10 #E36D5A;
-@define-color color11 #5DA98D;
-@define-color color12 #F0B674;
-@define-color color13 #F8BD98;
-@define-color color14 #FEDBA1;
-@define-color color15 #F6E5C8;
+@define-color color0 #393A3F;
+@define-color color1 #4488A3;
+@define-color color2 #937575;
+@define-color color3 #41859C;
+@define-color color4 #A07571;
+@define-color color5 #638195;
+@define-color color6 #AA9081;
+@define-color color7 #E8D7CD;
+@define-color color8 #A29790;
+@define-color color9 #1187B6;
+@define-color color10 #AC7E7E;
+@define-color color11 #3BA0C2;
+@define-color color12 #CE938D;
+@define-color color13 #84ACC6;
+@define-color color14 #E2C0AC;
+@define-color color15 #E8D7CD;
