--- a/.config/swaync/wallust/colors-wallust.css
+++ b/.config/swaync/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #F5E9E2;
+@define-color text #FCF7F5;
 @define-color foreground #bfd9d7;
-@define-color background rgba(14,16,20,0.25);
-@define-color background-alt #0E1014;
-@define-color cursor #F5E9E2;
-@define-color hovered #CE938D;
-@define-color button-background #AA9081;
-@define-color button-active #937575;
-@define-color border #1187B6;
-@define-color urgent #E8D7CD;
+@define-color background rgba(12,0,0,0.25);
+@define-color background-alt #0C0000;
+@define-color cursor #FCF7F5;
+@define-color hovered #E8C4B5;
+@define-color button-background #B9AFAA;
+@define-color button-active #9A8C8C;
+@define-color border #D7A490;
+@define-color urgent #F3ECE8;
 
 
-@define-color color0 #393A3F;
-@define-color color1 #4488A3;
-@define-color color2 #937575;
-@define-color color3 #41859C;
-@define-color color4 #A07571;
-@define-color color5 #638195;
-@define-color color6 #AA9081;
-@define-color color7 #E8D7CD;
-@define-color color8 #A29790;
-@define-color color9 #1187B6;
-@define-color color10 #AC7E7E;
-@define-color color11 #3BA0C2;
-@define-color color12 #CE938D;
-@define-color color13 #84ACC6;
-@define-color color14 #E2C0AC;
-@define-color color15 #E8D7CD;
+@define-color color0 #0C0000;
+@define-color color1 #A17B6C;
+@define-color color2 #9A8C8C;
+@define-color color3 #849595;
+@define-color color4 #AE9388;
+@define-color color5 #A1ABAA;
+@define-color color6 #B9AFAA;
+@define-color color7 #F3ECE8;
+@define-color color8 #AAA5A2;
+@define-color color9 #D7A490;
+@define-color color10 #CDBBBA;
+@define-color color11 #B0C6C7;
+@define-color color12 #E8C4B5;
+@define-color color13 #D7E4E3;
+@define-color color14 #F7E9E2;
+@define-color color15 #F3ECE8;
