--- a/.config/eww/scss/bar.scss
+++ b/.config/eww/scss/bar.scss
@@ -41,7 +41,7 @@ button:hover {
   color: rgba($color: $foreground, $alpha: 0.2);
   font-weight: 100;
   text-shadow: 1 1 rgba($color: $foreground, $alpha: 0.1);
-  transition-duration: 1s;
+  transition-duration: 500ms;
 }
 
 /* Occupied */
@@ -58,7 +58,7 @@ button:hover {
   color: $color12;
   font-weight: 900;
   text-shadow: 1 1 rgba($color: $color11, $alpha: 0.5);
-  transition-duration: 1s;
+  transition-duration: 500ms;
 }
 
 
@@ -78,7 +78,7 @@ button:hover {
   box-shadow: 0 0 5 1 rgba($color: $color3, $alpha: 0.7);
   font-weight: 900;
   text-shadow: 1 1 rgba($color: $foreground, $alpha: 0.5);
-  transition-duration: 1s;
+  transition-duration: 500ms;
 }
 
 .tray {
