--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -7,6 +7,7 @@
 @import "scss/windows.scss";
 @import "scss/clock.scss";
 @import "scss/quickActions.scss";
+@import "scss/alarm.scss";
 
 * {
   font-family: 'Poppins';
