--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FCF7F5;
+@define-color text #FEDEC5;
 @define-color foreground #bfd9d7;
-@define-color background rgba(12,0,0,0.25);
-@define-color background-alt #0C0000;
-@define-color cursor #FCF7F5;
-@define-color hovered #E8C4B5;
-@define-color button-background #B9AFAA;
-@define-color button-active #9A8C8C;
-@define-color border #D7A490;
-@define-color urgent #F3ECE8;
+@define-color background rgba(18,20,21,0.25);
+@define-color background-alt #121415;
+@define-color cursor #FEDEC5;
+@define-color hovered #E78B57;
+@define-color button-background #BD7A43;
+@define-color button-active #878470;
+@define-color border #C1855E;
+@define-color urgent #F5C8A4;
 
 
-@define-color color0 #0C0000;
-@define-color color1 #A17B6C;
-@define-color color2 #9A8C8C;
-@define-color color3 #849595;
-@define-color color4 #AE9388;
-@define-color color5 #A1ABAA;
-@define-color color6 #B9AFAA;
-@define-color color7 #F3ECE8;
-@define-color color8 #AAA5A2;
-@define-color color9 #D7A490;
-@define-color color10 #CDBBBA;
-@define-color color11 #B0C6C7;
-@define-color color12 #E8C4B5;
-@define-color color13 #D7E4E3;
-@define-color color14 #F7E9E2;
-@define-color color15 #F3ECE8;
+@define-color color0 #3C3F40;
+@define-color color1 #A07A61;
+@define-color color2 #878470;
+@define-color color3 #8C7D64;
+@define-color color4 #B1704B;
+@define-color color5 #9C7A59;
+@define-color color6 #BD7A43;
+@define-color color7 #F5C8A4;
+@define-color color8 #AC8C73;
+@define-color color9 #C1855E;
+@define-color color10 #999476;
+@define-color color11 #B39D7B;
+@define-color color12 #E78B57;
+@define-color color13 #D0A377;
+@define-color color14 #FCA25A;
+@define-color color15 #F5C8A4;
