--- a/.config/swaync/wallust/colors-wallust.css
+++ b/.config/swaync/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FEDEC5;
+@define-color text #FFF2DE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(18,20,21,0.25);
-@define-color background-alt #121415;
-@define-color cursor #FEDEC5;
-@define-color hovered #E78B57;
-@define-color button-background #BD7A43;
-@define-color button-active #878470;
-@define-color border #C1855E;
-@define-color urgent #F5C8A4;
+@define-color background rgba(13,15,17,0.25);
+@define-color background-alt #0D0F11;
+@define-color cursor #FFF2DE;
+@define-color hovered #F0B674;
+@define-color button-background #BEA479;
+@define-color button-active #B66A5E;
+@define-color border #D66A3B;
+@define-color urgent #F6E5C8;
 
 
-@define-color color0 #3C3F40;
-@define-color color1 #A07A61;
-@define-color color2 #878470;
-@define-color color3 #8C7D64;
-@define-color color4 #B1704B;
-@define-color color5 #9C7A59;
-@define-color color6 #BD7A43;
-@define-color color7 #F5C8A4;
-@define-color color8 #AC8C73;
-@define-color color9 #C1855E;
-@define-color color10 #999476;
-@define-color color11 #B39D7B;
-@define-color color12 #E78B57;
-@define-color color13 #D0A377;
-@define-color color14 #FCA25A;
-@define-color color15 #F5C8A4;
+@define-color color0 #383A3C;
+@define-color color1 #B27053;
+@define-color color2 #B66A5E;
+@define-color color3 #4F8571;
+@define-color color4 #B48957;
+@define-color color5 #BA8E72;
+@define-color color6 #BEA479;
+@define-color color7 #F6E5C8;
+@define-color color8 #ACA08C;
+@define-color color9 #D66A3B;
+@define-color color10 #E36D5A;
+@define-color color11 #5DA98D;
+@define-color color12 #F0B674;
+@define-color color13 #F8BD98;
+@define-color color14 #FEDBA1;
+@define-color color15 #F6E5C8;
