--- a/.config/eww/scss/bar.scss
+++ b/.config/eww/scss/bar.scss
@@ -22,17 +22,19 @@
 button {
   all: unset;
   padding: 3px 4px 3px 4px;
+  margin: 2;
   border-radius: 6px;
   font-size: 0.9rem;
   transition-property: all;
   transition-duration: 200ms;
+  box-shadow: 0 0 rgba($color: $color3, $alpha: 0);
   background-color: rgba($color: #ffffff, $alpha: 0.06);
 }
 
 button:hover {
   color: $foreground;
   background-color: rgba($color: $color3, $alpha: 0.6);
-  box-shadow: 0 0 5 1 rgba($color: $color3, $alpha: 0.7);
+  box-shadow: 2 2 rgba($color: $color3, $alpha: 0.3);
 }
 
 // workspace
@@ -59,6 +61,7 @@ button:hover {
   font-weight: 900;
   text-shadow: 1 1 rgba($color: $color11, $alpha: 0.5);
   transition-duration: 500ms;
+  background-color: rgba($color: $color3, $alpha: 0.4);
 }
 
 
@@ -75,7 +78,7 @@ button:hover {
 .w01010 {
   color: $foreground;
   background-color: rgba($color: $color11, $alpha: 0.7);
-  box-shadow: 0 0 5 1 rgba($color: $color3, $alpha: 0.7);
+  box-shadow: 2 2 rgba($color: $color3, $alpha: 0.5);
   font-weight: 900;
   text-shadow: 1 1 rgba($color: $foreground, $alpha: 0.5);
   transition-duration: 500ms;
