--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFF2DE;
+@define-color text #FEE8CE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(13,15,17,0.25);
-@define-color background-alt #0D0F11;
-@define-color cursor #FFF2DE;
-@define-color hovered #F0B674;
-@define-color button-background #BEA479;
-@define-color button-active #B66A5E;
-@define-color border #D66A3B;
-@define-color urgent #F6E5C8;
+@define-color background rgba(8,0,3,0.25);
+@define-color background-alt #080003;
+@define-color cursor #FEE8CE;
+@define-color hovered #F4887B;
+@define-color button-background #BC8D56;
+@define-color button-active #717C7B;
+@define-color border #B35E7D;
+@define-color urgent #F5D5B1;
 
 
-@define-color color0 #383A3C;
-@define-color color1 #B27053;
-@define-color color2 #B66A5E;
-@define-color color3 #4F8571;
-@define-color color4 #B48957;
-@define-color color5 #BA8E72;
-@define-color color6 #BEA479;
-@define-color color7 #F6E5C8;
-@define-color color8 #ACA08C;
-@define-color color9 #D66A3B;
-@define-color color10 #E36D5A;
-@define-color color11 #5DA98D;
-@define-color color12 #F0B674;
-@define-color color13 #F8BD98;
-@define-color color14 #FEDBA1;
-@define-color color15 #F6E5C8;
+@define-color color0 #0A0003;
+@define-color color1 #9D697C;
+@define-color color2 #717C7B;
+@define-color color3 #B36372;
+@define-color color4 #B7665C;
+@define-color color5 #B97A59;
+@define-color color6 #BC8D56;
+@define-color color7 #F5D5B1;
+@define-color color8 #AB957C;
+@define-color color9 #B35E7D;
+@define-color color10 #778987;
+@define-color color11 #E36E83;
+@define-color color12 #F4887B;
+@define-color color13 #F7A277;
+@define-color color14 #FBBC73;
+@define-color color15 #F5D5B1;
