--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FEE8CE;
+@define-color text #FEF8FB;
 @define-color foreground #bfd9d7;
-@define-color background rgba(8,0,3,0.25);
-@define-color background-alt #080003;
-@define-color cursor #FEE8CE;
-@define-color hovered #F4887B;
-@define-color button-background #BC8D56;
-@define-color button-active #717C7B;
-@define-color border #B35E7D;
-@define-color urgent #F5D5B1;
+@define-color background rgba(25,27,33,0.25);
+@define-color background-alt #191B21;
+@define-color cursor #FEF8FB;
+@define-color hovered #B9C7F6;
+@define-color button-background #BDB0B6;
+@define-color button-active #7F8893;
+@define-color border #75A7E6;
+@define-color urgent #F5ECF1;
 
 
-@define-color color0 #0A0003;
-@define-color color1 #9D697C;
-@define-color color2 #717C7B;
-@define-color color3 #B36372;
-@define-color color4 #B7665C;
-@define-color color5 #B97A59;
-@define-color color6 #BC8D56;
-@define-color color7 #F5D5B1;
-@define-color color8 #AB957C;
-@define-color color9 #B35E7D;
-@define-color color10 #778987;
-@define-color color11 #E36E83;
-@define-color color12 #F4887B;
-@define-color color13 #F7A277;
-@define-color color14 #FBBC73;
-@define-color color15 #F5D5B1;
+@define-color color0 #44464E;
+@define-color color1 #688AB5;
+@define-color color2 #7F8893;
+@define-color color3 #9E89AF;
+@define-color color4 #8B95B8;
+@define-color color5 #A0A6AD;
+@define-color color6 #BDB0B6;
+@define-color color7 #F5ECF1;
+@define-color color8 #ACA5A8;
+@define-color color9 #75A7E6;
+@define-color color10 #A1ADBC;
+@define-color color11 #D2B7E9;
+@define-color color12 #B9C7F6;
+@define-color color13 #D6DDE6;
+@define-color color14 #FCEAF3;
+@define-color color15 #F5ECF1;
