--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -1,5 +1,8 @@
 // https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-24/gtk/theme/Adwaita/_colors-public.scss
 @use "./widget/AppLauncher.scss";
+@use "./widget/QuickEdit.scss";
+@use "./widget/WallpaperPicker.scss";
+
 $fg-color: #{"@theme_fg_color"};
 $bg-color: #{"@theme_bg_color"};
 
