--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FEF8FB;
+@define-color text #FEF9F8;
 @define-color foreground #bfd9d7;
-@define-color background rgba(25,27,33,0.25);
-@define-color background-alt #191B21;
-@define-color cursor #FEF8FB;
-@define-color hovered #B9C7F6;
-@define-color button-background #BDB0B6;
-@define-color button-active #7F8893;
-@define-color border #75A7E6;
-@define-color urgent #F5ECF1;
+@define-color background rgba(14,14,16,0.25);
+@define-color background-alt #0E0E10;
+@define-color cursor #FEF9F8;
+@define-color hovered #B0BFC1;
+@define-color button-background #BCB3B1;
+@define-color button-active #9C7153;
+@define-color border #A59FA9;
+@define-color urgent #F5EEED;
 
 
-@define-color color0 #44464E;
-@define-color color1 #688AB5;
-@define-color color2 #7F8893;
-@define-color color3 #9E89AF;
-@define-color color4 #8B95B8;
-@define-color color5 #A0A6AD;
-@define-color color6 #BDB0B6;
-@define-color color7 #F5ECF1;
-@define-color color8 #ACA5A8;
-@define-color color9 #75A7E6;
-@define-color color10 #A1ADBC;
-@define-color color11 #D2B7E9;
-@define-color color12 #B9C7F6;
-@define-color color13 #D6DDE6;
-@define-color color14 #FCEAF3;
-@define-color color15 #F5ECF1;
+@define-color color0 #38393B;
+@define-color color1 #827E85;
+@define-color color2 #9C7153;
+@define-color color3 #958577;
+@define-color color4 #848F91;
+@define-color color5 #9797A4;
+@define-color color6 #BCB3B1;
+@define-color color7 #F5EEED;
+@define-color color8 #ABA7A6;
+@define-color color9 #A59FA9;
+@define-color color10 #D0976E;
+@define-color color11 #C7B19E;
+@define-color color12 #B0BFC1;
+@define-color color13 #C9C9DA;
+@define-color color14 #FBEEEC;
+@define-color color15 #F5EEED;
