--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FEF9F8;
+@define-color text #FFF3DE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(14,14,16,0.25);
-@define-color background-alt #0E0E10;
-@define-color cursor #FEF9F8;
-@define-color hovered #B0BFC1;
-@define-color button-background #BCB3B1;
-@define-color button-active #9C7153;
-@define-color border #A59FA9;
-@define-color urgent #F5EEED;
+@define-color background rgba(13,15,17,0.25);
+@define-color background-alt #0D0F11;
+@define-color cursor #FFF3DE;
+@define-color hovered #C4A37A;
+@define-color button-background #BEA57A;
+@define-color button-active #B4675C;
+@define-color border #AD6B50;
+@define-color urgent #F6E5C8;
 
 
-@define-color color0 #38393B;
-@define-color color1 #827E85;
-@define-color color2 #9C7153;
-@define-color color3 #958577;
-@define-color color4 #848F91;
-@define-color color5 #9797A4;
-@define-color color6 #BCB3B1;
-@define-color color7 #F5EEED;
-@define-color color8 #ABA7A6;
-@define-color color9 #A59FA9;
-@define-color color10 #D0976E;
-@define-color color11 #C7B19E;
-@define-color color12 #B0BFC1;
-@define-color color13 #C9C9DA;
-@define-color color14 #FBEEEC;
-@define-color color15 #F5EEED;
+@define-color color0 #383A3C;
+@define-color color1 #9C7363;
+@define-color color2 #B4675C;
+@define-color color3 #648676;
+@define-color color4 #937A5C;
+@define-color color5 #BA8E72;
+@define-color color6 #BEA57A;
+@define-color color7 #F6E5C8;
+@define-color color8 #ACA08C;
+@define-color color9 #AD6B50;
+@define-color color10 #E06757;
+@define-color color11 #85B29D;
+@define-color color12 #C4A37A;
+@define-color color13 #F8BD98;
+@define-color color14 #FEDCA2;
+@define-color color15 #F6E5C8;
