--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFF3DE;
+@define-color text #FFE0C5;
 @define-color foreground #bfd9d7;
-@define-color background rgba(13,15,17,0.25);
-@define-color background-alt #0D0F11;
-@define-color cursor #FFF3DE;
-@define-color hovered #C4A37A;
-@define-color button-background #BEA57A;
-@define-color button-active #B4675C;
-@define-color border #AD6B50;
-@define-color urgent #F6E5C8;
+@define-color background rgba(12,15,15,0.25);
+@define-color background-alt #0C0F0F;
+@define-color cursor #FFE0C5;
+@define-color hovered #A79D7D;
+@define-color button-background #BE7C43;
+@define-color button-active #8F7E6E;
+@define-color border #818876;
+@define-color urgent #F6CAA3;
 
 
-@define-color color0 #383A3C;
-@define-color color1 #9C7363;
-@define-color color2 #B4675C;
-@define-color color3 #648676;
-@define-color color4 #937A5C;
-@define-color color5 #BA8E72;
-@define-color color6 #BEA57A;
-@define-color color7 #F6E5C8;
-@define-color color8 #ACA08C;
-@define-color color9 #AD6B50;
-@define-color color10 #E06757;
-@define-color color11 #85B29D;
-@define-color color12 #C4A37A;
-@define-color color13 #F8BD98;
-@define-color color14 #FEDCA2;
-@define-color color15 #F6E5C8;
+@define-color color0 #373A3A;
+@define-color color1 #7E8277;
+@define-color color2 #8F7E6E;
+@define-color color3 #AC7254;
+@define-color color4 #847D66;
+@define-color color5 #977A5E;
+@define-color color6 #BE7C43;
+@define-color color7 #F6CAA3;
+@define-color color8 #AC8D72;
+@define-color color9 #818876;
+@define-color color10 #9C8166;
+@define-color color11 #D98457;
+@define-color color12 #A79D7D;
+@define-color color13 #CAA27D;
+@define-color color14 #FEA559;
+@define-color color15 #F6CAA3;
