--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFE0C5;
+@define-color text #FFFAE9;
 @define-color foreground #bfd9d7;
-@define-color background rgba(12,15,15,0.25);
-@define-color background-alt #0C0F0F;
-@define-color cursor #FFE0C5;
-@define-color hovered #A79D7D;
-@define-color button-background #BE7C43;
-@define-color button-active #8F7E6E;
-@define-color border #818876;
-@define-color urgent #F6CAA3;
+@define-color background rgba(14,15,17,0.25);
+@define-color background-alt #0E0F11;
+@define-color cursor #FFFAE9;
+@define-color hovered #E6C9A9;
+@define-color button-background #BFB591;
+@define-color button-active #4D868F;
+@define-color border #BE9C4C;
+@define-color urgent #F6F0D8;
 
 
-@define-color color0 #373A3A;
-@define-color color1 #7E8277;
-@define-color color2 #8F7E6E;
-@define-color color3 #AC7254;
-@define-color color4 #847D66;
-@define-color color5 #977A5E;
-@define-color color6 #BE7C43;
-@define-color color7 #F6CAA3;
-@define-color color8 #AC8D72;
-@define-color color9 #818876;
-@define-color color10 #9C8166;
-@define-color color11 #D98457;
-@define-color color12 #A79D7D;
-@define-color color13 #CAA27D;
-@define-color color14 #FEA559;
-@define-color color15 #F6CAA3;
+@define-color color0 #393A3C;
+@define-color color1 #947C43;
+@define-color color2 #4D868F;
+@define-color color3 #AF897E;
+@define-color color4 #AD977F;
+@define-color color5 #BA9E4A;
+@define-color color6 #BFB591;
+@define-color color7 #F6F0D8;
+@define-color color8 #ACA897;
+@define-color color9 #BE9C4C;
+@define-color color10 #66B2BE;
+@define-color color11 #E9B7A8;
+@define-color color12 #E6C9A9;
+@define-color color13 #F8D263;
+@define-color color14 #FEF1C1;
+@define-color color15 #F6F0D8;
