--- a/.config/eww/wallust/colors-eww.scss
+++ b/.config/eww/wallust/colors-eww.scss
@@ -3,25 +3,25 @@
 $wallpaper: "/tmp/2";
 
 // Special
-$background: #0E0F11;
-$foreground: #FFFAE9;
-$cursor: #FFFAE9;
+$background: #0F0F12;
+$foreground: #FEEADE;
+$cursor: #FEEADE;
 
 // Colors
-$color0: #393A3C;
-$color1: #947C43;
-$color2: #4D868F;
-$color3: #AF897E;
-$color4: #AD977F;
-$color5: #BA9E4A;
-$color6: #BFB591;
-$color7: #F6F0D8;
-$color8: #ACA897;
-$color9: #BE9C4C;
-$color10: #66B2BE;
-$color11: #E9B7A8;
-$color12: #E6C9A9;
-$color13: #F8D263;
-$color14: #FEF1C1;
-$color15: #F6F0D8;
+$color0: #393A3E;
+$color1: #987170;
+$color2: #8A7B77;
+$color3: #857E8D;
+$color4: #A6725F;
+$color5: #987E76;
+$color6: #BD9279;
+$color7: #F5D9C8;
+$color8: #AC988C;
+$color9: #AC6C6A;
+$color10: #9E8680;
+$color11: #978CA2;
+$color12: #D08367;
+$color13: #CBA89E;
+$color14: #FCC3A1;
+$color15: #F5D9C8;
 
