--- a/.config/wlogout/wallust/colors-wallust.css
+++ b/.config/wlogout/wallust/colors-wallust.css
@@ -1,28 +1,28 @@
-@define-color text #FFFAE9;
+@define-color text #FEEADE;
 @define-color foreground #bfd9d7;
-@define-color background rgba(14,15,17,0.25);
-@define-color background-alt #0E0F11;
-@define-color cursor #FFFAE9;
-@define-color hovered #E6C9A9;
-@define-color button-background #BFB591;
-@define-color button-active #4D868F;
-@define-color border #BE9C4C;
-@define-color urgent #F6F0D8;
+@define-color background rgba(15,15,18,0.25);
+@define-color background-alt #0F0F12;
+@define-color cursor #FEEADE;
+@define-color hovered #D08367;
+@define-color button-background #BD9279;
+@define-color button-active #8A7B77;
+@define-color border #AC6C6A;
+@define-color urgent #F5D9C8;
 
 
-@define-color color0 #393A3C;
-@define-color color1 #947C43;
-@define-color color2 #4D868F;
-@define-color color3 #AF897E;
-@define-color color4 #AD977F;
-@define-color color5 #BA9E4A;
-@define-color color6 #BFB591;
-@define-color color7 #F6F0D8;
-@define-color color8 #ACA897;
-@define-color color9 #BE9C4C;
-@define-color color10 #66B2BE;
-@define-color color11 #E9B7A8;
-@define-color color12 #E6C9A9;
-@define-color color13 #F8D263;
-@define-color color14 #FEF1C1;
-@define-color color15 #F6F0D8;
+@define-color color0 #393A3E;
+@define-color color1 #987170;
+@define-color color2 #8A7B77;
+@define-color color3 #857E8D;
+@define-color color4 #A6725F;
+@define-color color5 #987E76;
+@define-color color6 #BD9279;
+@define-color color7 #F5D9C8;
+@define-color color8 #AC988C;
+@define-color color9 #AC6C6A;
+@define-color color10 #9E8680;
+@define-color color11 #978CA2;
+@define-color color12 #D08367;
+@define-color color13 #CBA89E;
+@define-color color14 #FCC3A1;
+@define-color color15 #F5D9C8;
